2002-10-02  Darin Adler  <darin@apple.com>

	Get rid of uses of canonicalURL.

        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (+[WebSubresourceClient startLoadingResource:withURL:referrer:forDataSource:]):
	Start with normal URL. The change to the canonical URL will come in as a redirect.
        (-[WebSubresourceClient handle:didReceiveData:]): Remove assert.
        (-[WebSubresourceClient handleDidFinishLoading:]): Ditto.
        * WebView.subproj/WebDataSource.m:
        (-[WebDataSource initWithRequest:]):Start with normal URL. The change to the
	canonical URL will come in as a redirect.

2002-10-02  Ken Kocienda  <kocienda@apple.com>

	Added import of WebHTTPResourceRequest.h to get access to methods
	which have moved to the HTTP-sepcific request category.

        * WebView.subproj/WebDataSourcePrivate.m

2002-10-01  John Sullivan  <sullivan@apple.com>

        * WebKit.exp: added .objc_class_name_WebTextRendererFactory
	so I could use it from WebBrowser.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge startLoadingResource:withURL:referrer:]):
	Just changed whitespace so the .exp change would be built.

2002-10-01  Chris Blumenberg  <cblu@apple.com>

	Fixed build breakage.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView setWindow]):

2002-10-01  Ken Kocienda  <kocienda@apple.com>

        Implemented WebResourceRequest "category" design for extending a
        request with protocol-specific data.

        * WebCoreSupport.subproj/WebBridge.m: Now imports WebHTTPResourceRequest.h.
        * WebCoreSupport.subproj/WebSubresourceClient.m: Ditto.
        * WebView.subproj/WebMainResourceClient.m: Ditto.

2002-10-01  Chris Blumenberg  <cblu@apple.com>

	- Added debug drawing
	- removed unnecessary ifdef'ing.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView sendActivateEvent:]):
        (-[WebBaseNetscapePluginView becomeFirstResponder]):